--- a/index.html
+++ b/index.html
@@ -549,14 +549,15 @@
     </section>
 
 
-<section>
-    <h1>
-        welcome
-    </h1>
-</section>    <section>
+    <section>
+        <h1>
+            welcome
+        </h1>
+    </section>
+    <section>
         <h4>test branch</h4>
     </section>
-    
+
     <section>
         <div class="rating-section_content bg-display text-white">
             <div class="container">
