edit navbar ,edit hero swiper

--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
                         <div class="mot-top-nav-action d-flex align-items-center gap-16">
                             <a href="#" class="d-flex align-items-center gap-4 text-white">
                                 <i class="icon-scisp-location"></i>
+                                <span>الرياض</span>
                             </a>
                             <a href="#" class="d-flex align-items-center gap-4 text-white">
                                 <i class="icon-scisp-time"></i>
+                                <span>2:30 PM</span>
                             </a>
                             <a href="#" class="d-flex align-items-center gap-4 text-white">
                                 <i class="icon-scisp-calendar"></i>
+                                <span>3-Sep-2024</span>
                             </a>
                         </div>
                     </div>
@@ -53,7 +56,7 @@
         <header class="main-header">
             <div class="container-navbar">
                 <div class="container">
-                    <nav class="navbar navbar-expand-xl scisp-navbar">
+                    <nav class="navbar navbar-expand-xl scisp-navbar rounded-8 px-24">
                         <a class="navbar-brand" href="/">
                             <img src="/image/Logo-New.svg" draggable="false" alt="scisp-logo">
                         </a>
@@ -279,11 +282,11 @@
             <div class="swiper-wrapper">
 
                 <!-- Video Slide with Caption -->
-                <div class="swiper-slide position-relative">
+                <div class="swiper-slide">
                     <div class="video-wrapper ">
                         <video class="video-slide" src="image/hero.mp4" autoplay muted loop playsinline
                             playsinline></video>
-                        <div class="container">
+                        <!-- <div class="container">
                             <div class="caption-overlay">
                                 <h1>نعمل على تعزيز الشراكات الاستراتيجية للمملكة مع دول العالم
                                 </h1>
@@ -292,7 +295,7 @@
                                     <button class="btn btn-secondary-white">تواصل معنا</button>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -308,25 +311,26 @@
                 <div class="swiper-slide">
                     <img src="image/slide-1.png" class="w-100" alt="Slide 3" />
                 </div>
-                <div class="container">
-                    <div class="swiper-control d-flex align-items-center gap-24">
-                        <div class="swiper-scrollbar bg-white"></div>
-                        <div class="swiper-control-action d-flex align-items-center gap-16">
-                            <div class="swiper-button-next">
-                                <button class="btn btn-secondary" type="button">
-                                    <i class="icon-scisp-arrow-right"></i>
-                                </button>
-                            </div>
-                            <div class="swiper-button-prev">
-                                <button class="btn btn-secondary" type="button">
-                                    <i class="icon-scisp-arrow-left"></i>
-                                </button>
-                            </div>
+                
+            </div>
+            <div class="container">
+                <div class="swiper-control d-flex align-items-center gap-24 position-relative">
+                    <div class="swiper-scrollbar bg-white"></div>
+                    <div class="swiper-control-action d-flex align-items-center gap-16">
+                        
+                        <div class="swiper-button-prev">
+                            <button class="btn btn-secondary text-white" type="button">
+                                <i class="icon-scisp-Arrow-left"></i>
+                            </button>
+                        </div>
+                        <div class="swiper-button-next">
+                            <button class="btn btn-secondary text-white" type="button">
+                                <i class="icon-scisp-arrow-right"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -376,7 +380,7 @@
                                 <i class="icon-scisp-diamond"></i>
                             </div>
                             <div class="d-flex align-items-center flex-wrap gap-12">
-                                <h4>
+                                <h4 class="mb-0">
                                     قيمنا
                                 </h4>
                                 <p class="mb-0">
@@ -392,7 +396,7 @@
                                 <i class="icon-scisp-eye"></i>
                             </div>
                             <div class="d-flex align-items-center flex-wrap gap-12">
-                                <h4>
+                                <h4 class="mb-0">
                                     رؤيتنا
                                 </h4>
                                 <p class="mb-0">
@@ -408,7 +412,7 @@
                                 <i class="icon-scisp-target"></i>
                             </div>
                             <div class="d-flex align-items-center flex-wrap gap-12">
-                                <h4>
+                                <h4 class="mb-0">
                                     رسالتنا
                                 </h4>
                                 <p class="mb-0">
@@ -440,7 +444,7 @@
                 </div>
                 <div>
                     <!-- Swiper -->
-                    <div class="swiper spcisp-role-slider">
+                     <div class="swiper spcisp-role-slider">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div
@@ -546,9 +550,6 @@
 
         </div>
 
-    </section>
-    <section>
-        <h4>test branch1</h4>
     </section>
 
     <section>
