--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                                     </div>
                                     <div class="d-flex flex-column gap-8">
                                         <h4>
-                                            التفعيل والمتابعة
+                                            إجراء الدراسات
                                         </h4>
                                         <p class="mb-0">
                                             العمل والتنسيق مع الجهات الحكومية والخاصة ذات العلاقة في كل ما يلزم لتطوير
@@ -493,7 +493,7 @@
                                     </div>
                                     <div class="d-flex flex-column gap-8">
                                         <h4>
-                                            التفعيل والمتابعة
+                                            العمل والتنسيق
                                         </h4>
                                         <p class="mb-0">
                                             العمل والتنسيق مع الجهات الحكومية والخاصة ذات العلاقة في كل ما يلزم لتطوير
