--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div></div>
         <header class="main-header">
             <div class="container-navbar">
-                <div class="container">
-                    <nav class="navbar navbar-expand-xl scisp-navbar rounded-8 px-24">
+                <nav class="navbar navbar-expand-xl scisp-navbar rounded-8 px-24">
+                    <div class="d-flex align-items-center justify-content-between w-100 flex-wrap scisp-navbar__wapper">
                         <a class="navbar-brand" href="/">
                             <img src="/image/Logo-New.svg" draggable="false" alt="scisp-logo">
                         </a>
@@ -268,9 +268,8 @@
                                 </div>
                             </div>
                         </div> -->
-
-                    </nav>
-                </div>
+                    </div>
+                </nav>
             </div>
         </header>
         <div class="overlay-megamenu" id="overlay"></div>
