--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                             </div>
                         </div>
                         <div class="w-100">
-                            <blockquote class="twitter-tweet">
+                            <blockquote class="twitter-tweet" style="width: 100%; max-width: 100%;">
                                 <p lang="ar" dir="rtl">
                                   في إطار الجهود لتعزيز #الشراكات_الاستراتيجية الدولية للمملكة؛ استقبل سعادة المهندس رعد بن غيث البركاتي، الرئيس التنفيذي المكلف لمركز #الشراكات_الاستراتيجية، سعادة السيدة ليزالوته بليزنر، سفيرة مملكة #الدنمارك لدى المملكة. تم خلال اللقاء مناقشة العديد من الموضوعات المشتركة، وسبل تعزيز التعاون بين البلدين.
                                 </p>
