--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
     <section class="scisp-about-section bg-dark-primary py-64">
         <div class="container ">
-            <div class="row ">
+            <div class="d-flex flex-lg-row flex-md-row flex-xl-row flex-column gap-24 ">
                 <div class="col-md-6 col-lg-4 text-white">
                     <div class="d-flex flex-column gap-24">
                         <div class="spcisp-title d-flex justify-content-between">
