--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
     <!--News Section-->
     <section class="scisp-news py-64 bg-white">
         <div class="container">
-            <div class="row">
+            <div class="d-flex flex-lg-row flex-md-row flex-xl-row flex-column gap-24">
                 <div class="col-lg-6 col-xl-6 col-md-6 col-sm-12">
                     <div class="d-flex gap-24 flex-column">
                         <div>
