--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                                                     19 مارس 2025
                                                 </span>
                                             </div>
-                                            <div class="d-flex flex-column gap-8 py-16">
+                                            <div class="d-flex flex-column gap-8 px-16">
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
@@ -664,7 +664,7 @@
                                                     19 مارس 2025
                                                 </span>
                                             </div>
-                                            <div class="d-flex flex-column gap-8 py-16">
+                                            <div class="d-flex flex-column gap-8 px-16">
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
@@ -700,7 +700,7 @@
                                                     19 مارس 2025
                                                 </span>
                                             </div>
-                                            <div class="d-flex flex-column gap-8 py-16">
+                                            <div class="d-flex flex-column gap-8 px-16">
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
@@ -736,7 +736,7 @@
                                                     19 مارس 2025
                                                 </span>
                                             </div>
-                                            <div class="d-flex flex-column gap-8 py-16">
+                                            <div class="d-flex flex-column gap-8 px-16">
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
