--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                                                     19 مارس 2025
                                                 </span>
                                             </div>
-                                            <div class="d-flex flex-column gap-8 py-16">
+                                            <div class="d-flex flex-column gap-8 px-16">
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
