--- a/index.html
+++ b/index.html
@@ -557,15 +557,7 @@
                         </div>
                         <div class="swiper-pagination"></div>
                     </div>
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
-                    
->>>>>>> 7b09b58 (accept merge)
-=======
-
->>>>>>> ce4297a (commit)
                 </div>
 
             </div>
@@ -574,31 +566,10 @@
 
     </section>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
     <!--News Section-->
     <section class="scisp-news py-64 bg-white">
         <div class="container">
             <div class="d-flex flex-lg-row flex-md-row flex-xl-row flex-column gap-24">
-<<<<<<< HEAD
-=======
-            <div class="row">
->>>>>>> ece1fb6 (accept merge)
-=======
-=======
->>>>>>> ece1fb6 (accept merge)
-    <!--News Section-->
-    <section class="scisp-news py-64 bg-white">
-        <div class="container">
-            <div class="row">
-<<<<<<< HEAD
->>>>>>> 7b09b58 (accept merge)
-=======
->>>>>>> ece1fb6 (accept merge)
-=======
->>>>>>> 991f4aa (test)
                 <div class="col-lg-6 col-xl-6 col-md-6 col-sm-12">
                     <div class="d-flex gap-24 flex-column">
                         <div>
@@ -611,12 +582,6 @@
                                 </div>
                             </div>
                         </div>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 991f4aa (test)
                         <div class="w-100">
                             <blockquote class="twitter-tweet" style="width: 100%; max-width: 100%;">
                                 <p lang="ar" dir="rtl">
@@ -661,216 +626,7 @@
                                                     19 مارس 2025
                                                 </span>
                                             </div>
-                                            <div class="d-flex flex-column gap-8 px-16">
-                                                <div>
-                                                    <h4 class="mb-0">
-                                                        مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                                        للتواصل الحضاري
-                                                    </h4>
-                                                </div>
-                                                <div>
-                                                    <p class="mb-0">
-                                                        وقّع المركز السعودي للشراكات الاستراتيجية الدولية مذكرة تعاون مع
-                                                        مشروع سلام
-                                                        للتواصل الحضاري، يوم الخميس 29 ربيع أول 1443ه، الموافق 4 نوفمبر
-                                                        2021م
-                                                    </p>
-                                                </div>
-
-                                            </div>
-                                            <div>
-                                                <button class="btn btn-secondary d-flex align-items-center">
-                                                    التفاصيل<i class="icon-scisp-arrow-right"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <!--Card-->
-                                        <div class="d-flex flex-column gap-24 news-card rounded-8 px-16 py-16">
-                                            <div class="news-card-image">
-                                                <img class="w-100 rounded-4"
-                                                    src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                                            </div>
-                                            <div class="news-card-date text-primary ">
-                                                <span>
-                                                    19 مارس 2025
-                                                </span>
-                                            </div>
-                                            <div class="d-flex flex-column gap-8 px-16">
-<<<<<<< HEAD
-                                                <div>
-                                                    <h4 class="mb-0">
-                                                        مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                                        للتواصل الحضاري
-                                                    </h4>
-                                                </div>
-                                                <div>
-                                                    <p class="mb-0">
-                                                        وقّع المركز السعودي للشراكات الاستراتيجية الدولية مذكرة تعاون مع
-                                                        مشروع سلام
-                                                        للتواصل الحضاري، يوم الخميس 29 ربيع أول 1443ه، الموافق 4 نوفمبر
-                                                        2021م
-                                                    </p>
-                                                </div>
-
-                                            </div>
-                                            <div>
-                                                <button class="btn btn-secondary d-flex align-items-center">
-                                                    التفاصيل<i class="icon-scisp-arrow-right"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <!--Card-->
-                                        <div class="d-flex flex-column gap-24 news-card rounded-8 px-16 py-16">
-                                            <div class="news-card-image">
-                                                <img class="w-100 rounded-4"
-                                                    src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                                            </div>
-                                            <div class="news-card-date text-primary ">
-                                                <span>
-                                                    19 مارس 2025
-                                                </span>
-                                            </div>
-                                            <div class="d-flex flex-column gap-8 px-16">
-                                                <div>
-                                                    <h4 class="mb-0">
-                                                        مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                                        للتواصل الحضاري
-                                                    </h4>
-                                                </div>
-                                                <div>
-                                                    <p class="mb-0">
-                                                        وقّع المركز السعودي للشراكات الاستراتيجية الدولية مذكرة تعاون مع
-                                                        مشروع سلام
-                                                        للتواصل الحضاري، يوم الخميس 29 ربيع أول 1443ه، الموافق 4 نوفمبر
-                                                        2021م
-                                                    </p>
-                                                </div>
-
-                                            </div>
-                                            <div>
-                                                <button class="btn btn-secondary d-flex align-items-center">
-                                                    التفاصيل<i class="icon-scisp-arrow-right"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <!--Card-->
-                                        <div class="d-flex flex-column gap-24 news-card rounded-8 px-16 py-16">
-                                            <div class="news-card-image">
-                                                <img class="w-100 rounded-4"
-                                                    src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                                            </div>
-                                            <div class="news-card-date text-primary ">
-                                                <span>
-                                                    19 مارس 2025
-                                                </span>
-                                            </div>
-                                            <div class="d-flex flex-column gap-8 px-16">
-                                                <div>
-                                                    <h4 class="mb-0">
-                                                        مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                                        للتواصل الحضاري
-                                                    </h4>
-                                                </div>
-                                                <div>
-                                                    <p class="mb-0">
-                                                        وقّع المركز السعودي للشراكات الاستراتيجية الدولية مذكرة تعاون مع
-                                                        مشروع سلام
-                                                        للتواصل الحضاري، يوم الخميس 29 ربيع أول 1443ه، الموافق 4 نوفمبر
-                                                        2021م
-                                                    </p>
-                                                </div>
-
-                                            </div>
-                                            <div>
-                                                <button class="btn btn-secondary d-flex align-items-center">
-                                                    التفاصيل<i class="icon-scisp-arrow-right"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-pagination"></div>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-=======
-
-<section>
-    <h1>
-        welcome
-    </h1>
-</section>    <section>
-        <h4>test branch</h4>
->>>>>>> 71e44db (accept merge)
-=======
-=======
->>>>>>> ece1fb6 (accept merge)
-                        <div class="m-auto">
-=======
-                        <div class="w-100">
->>>>>>> ce4297a (commit)
-                            <blockquote class="twitter-tweet">
-                                <p lang="ar" dir="rtl">
-                                  في إطار الجهود لتعزيز #الشراكات_الاستراتيجية الدولية للمملكة؛ استقبل سعادة المهندس رعد بن غيث البركاتي، الرئيس التنفيذي المكلف لمركز #الشراكات_الاستراتيجية، سعادة السيدة ليزالوته بليزنر، سفيرة مملكة #الدنمارك لدى المملكة. تم خلال اللقاء مناقشة العديد من الموضوعات المشتركة، وسبل تعزيز التعاون بين البلدين.
-                                </p>
-                                &mdash; Strategic Partnerships (@scisp_ksa) 
-                                <a href="https://twitter.com/scisp_ksa/status/1902266659898822943?ref_src=twsrc%5Etfw">March 19, 2025</a>
-                              </blockquote>
-                              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        </div>
-                        
-                    </div>
-<<<<<<< HEAD
-=======
->>>>>>> aa32936 (accept merge)
-=======
->>>>>>> ece1fb6 (accept merge)
-
-                </div>
-                <div class="col-lg-6 col-xl-6 col-md-6 col-sm-12">
-                    <div class="d-flex gap-24 flex-column">
-                        <div>
-                            <div class="spcisp-title d-flex justify-content-between">
-                                <h2> أخبار المركز </h2>
-                                <div>
-                                    <button class="btn btn-secondary d-flex align-items-center">
-                                        عرض جميع الاخبار<i class="icon-scisp-arrow-right"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <div>
-                            <!-- Swiper -->
-                            <div class="swiper spcisp-news-slider position-relative">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <!--Card-->
-                                        <div class="d-flex flex-column gap-24 news-card rounded-8 px-16 py-16">
-                                            <div class="news-card-image">
-                                                <img class="w-100 rounded-4"
-                                                    src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                                            </div>
-                                            <div class="news-card-date text-primary ">
-                                                <span>
-                                                    19 مارس 2025
-                                                </span>
-                                            </div>
-                                            <div class="d-flex flex-column gap-8 px-16">
+                                            <div class="d-flex flex-column gap-8 py-16">
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
@@ -907,8 +663,6 @@
                                                 </span>
                                             </div>
                                             <div class="d-flex flex-column gap-8 py-16">
-=======
->>>>>>> 61dc25f (news padding card)
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
@@ -944,7 +698,7 @@
                                                     19 مارس 2025
                                                 </span>
                                             </div>
-                                            <div class="d-flex flex-column gap-8 px-16">
+                                            <div class="d-flex flex-column gap-8 py-16">
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
@@ -980,7 +734,7 @@
                                                     19 مارس 2025
                                                 </span>
                                             </div>
-                                            <div class="d-flex flex-column gap-8 px-16">
+                                            <div class="d-flex flex-column gap-8 py-16">
                                                 <div>
                                                     <h4 class="mb-0">
                                                         مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
@@ -1016,7 +770,6 @@
             </div>
 
         </div>
->>>>>>> 7b09b58 (accept merge)
     </section>
 
     <section>
