--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Your Custom Utility CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/status.css" />
+
 
 </head>
 
