--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <div class="video-wrapper ">
                         <video class="video-slide" src="image/hero.mp4" autoplay muted loop playsinline
                             playsinline></video>
-                        <!-- <div class="container">
+                        <div class="container">
                             <div class="caption-overlay">
                                 <h1>نعمل على تعزيز الشراكات الاستراتيجية للمملكة مع دول العالم
                                 </h1>
@@ -296,7 +296,7 @@
                                     <button class="btn btn-secondary-white">تواصل معنا</button>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
@@ -339,7 +339,7 @@
 
     <section class="scisp-about-section bg-dark-primary py-64">
         <div class="container ">
-            <div class="d-flex flex-lg-row flex-md-row flex-xl-row flex-column gap-24 ">
+            <div class="row">
                 <div class="col-md-6 col-lg-4 text-white">
                     <div class="d-flex flex-column gap-24">
                         <div class="spcisp-title d-flex justify-content-between">
@@ -571,7 +571,7 @@
     <!--News Section-->
     <section class="scisp-news py-64 bg-white">
         <div class="container">
-            <div class="d-flex flex-lg-row flex-md-row flex-xl-row flex-column gap-24">
+            <div class="row">
                 <div class="col-lg-6 col-xl-6 col-md-6 col-sm-12">
                     <div class="d-flex gap-24 flex-column">
                         <div>
