edit hero section

--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@
             <div class="container">
                 <div class="swiper-control d-flex align-items-center gap-24 position-relative">
                     <div class="swiper-scrollbar bg-white"></div>
+
+                    <div class="d-flex gap-8 align-items-center justify-content-center d-lg-none d-xl-none hero-swiper-pagination"></div>
+
                     <div class="swiper-control-action d-flex align-items-center gap-16">
 
                         <div class="swiper-button-prev">
@@ -375,7 +378,7 @@
                 <div class="col-md-6 col-lg-8">
                     <div class="d-flex flex-column gap-24">
                         <div
-                            class="px-16 py-24 bg-white d-flex rounded-4 gap-12 align-items-center align-content-center">
+                            class="px-16 py-24 bg-white d-flex rounded-4 gap-12 align-items-start align-items-md-center align-items-lg-center align-items-xl-center align-content-center">
                             <div
                                 class="border-1 rounded-full about-icon align-content-center text-center text-icon-success">
                                 <i class="icon-scisp-diamond"></i>
@@ -391,12 +394,12 @@
                                         النزاهة، المسؤولية، المهارة، و المرونة هي جوهر وجودنا.
                                     </p>
                                 </div>
-                                
+
                             </div>
 
                         </div>
                         <div
-                            class="px-16 py-24 bg-white d-flex rounded-4 gap-12 align-items-center align-content-center">
+                            class="px-16 py-24 bg-white d-flex rounded-4 gap-12 align-items-start align-items-md-center align-items-lg-center align-items-xl-center align-content-center">
                             <div
                                 class="border-1 rounded-full about-icon align-content-center text-center text-icon-success">
                                 <i class="icon-scisp-eye"></i>
@@ -416,7 +419,7 @@
 
                         </div>
                         <div
-                            class="px-16 py-24 bg-white d-flex rounded-4 gap-12 align-items-center align-content-center">
+                            class="px-16 py-24 bg-white d-flex rounded-4 gap-12 align-items-start align-items-md-center align-items-lg-center align-items-xl-center align-content-center">
                             <div
                                 class="border-1 rounded-full about-icon align-content-center text-center text-icon-success">
                                 <i class="icon-scisp-target"></i>
@@ -587,14 +590,18 @@
                         <div class="w-100">
                             <blockquote class="twitter-tweet" style="width: 100%; max-width: 100%;">
                                 <p lang="ar" dir="rtl">
-                                  في إطار الجهود لتعزيز #الشراكات_الاستراتيجية الدولية للمملكة؛ استقبل سعادة المهندس رعد بن غيث البركاتي، الرئيس التنفيذي المكلف لمركز #الشراكات_الاستراتيجية، سعادة السيدة ليزالوته بليزنر، سفيرة مملكة #الدنمارك لدى المملكة. تم خلال اللقاء مناقشة العديد من الموضوعات المشتركة، وسبل تعزيز التعاون بين البلدين.
+                                    في إطار الجهود لتعزيز #الشراكات_الاستراتيجية الدولية للمملكة؛ استقبل سعادة المهندس
+                                    رعد بن غيث البركاتي، الرئيس التنفيذي المكلف لمركز #الشراكات_الاستراتيجية، سعادة
+                                    السيدة ليزالوته بليزنر، سفيرة مملكة #الدنمارك لدى المملكة. تم خلال اللقاء مناقشة
+                                    العديد من الموضوعات المشتركة، وسبل تعزيز التعاون بين البلدين.
                                 </p>
-                                &mdash; Strategic Partnerships (@scisp_ksa) 
-                                <a href="https://twitter.com/scisp_ksa/status/1902266659898822943?ref_src=twsrc%5Etfw">March 19, 2025</a>
-                              </blockquote>
-                              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                &mdash; Strategic Partnerships (@scisp_ksa)
+                                <a href="https://twitter.com/scisp_ksa/status/1902266659898822943?ref_src=twsrc%5Etfw">March
+                                    19, 2025</a>
+                            </blockquote>
+                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
-                        
+
                     </div>
 
                 </div>
