--- a/index.html
+++ b/index.html
@@ -318,7 +318,9 @@
                 <div class="swiper-control d-flex align-items-center gap-24 position-relative">
                     <div class="swiper-scrollbar bg-white"></div>
 
-                    <div class="d-flex gap-8 align-items-center justify-content-center d-lg-none d-xl-none hero-swiper-pagination"></div>
+                    <div
+                        class="d-flex gap-8 align-items-center justify-content-center d-lg-none d-xl-none hero-swiper-pagination">
+                    </div>
 
                     <div class="swiper-control-action d-flex align-items-center gap-16">
 
@@ -448,8 +450,9 @@
 
     <!--role section-->
     <section class="scisp-role-section py-64">
-        <div class="container">
-            <div class="d-flex flex-column gap-48">
+        <div class="d-flex flex-column gap-32">
+            <div class="container">
+
                 <div>
                     <div class="spcisp-title d-flex justify-content-between">
                         <h2>دور المركز </h2>
@@ -460,6 +463,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="container role-container-swiper">
                 <div class="position-relative">
                     <!-- Swiper -->
                     <div class="swiper spcisp-role-slider position-relative">
@@ -564,10 +569,10 @@
                     </div>
 
                 </div>
-
             </div>
 
         </div>
+
 
     </section>
 
