--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                         <!-- END || Icons for Mobile Only -->
                         <!-- Menu -->
-                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                                 <!-- The home -->
                                 <li class="nav-item">
@@ -205,7 +205,7 @@
                                 </li>
                                 <!-- END || Enablement -->
                             </ul>
-                            <ul class="navbar-nav d-none d-xl-flex ml-auto">
+                            <ul class="navbar-nav d-none d-xl-flex">
                                 <!-- Search -->
                                 <li class="nav-item">
                                     <a class="nav-link gap-4" href="#" data-target="#megaSearch">
